force-app/main/default/objects/OA_Knowledge_Document__c/fields/Acquisition_Source__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquisition Source</label>
    <referenceTo>OA_Acquisition_Source__c</referenceTo>
    <relationshipLabel>Knowledge Documents</relationshipLabel>
    <relationshipName>Kd_Acquisition_Source</relationshipName>
    <type>Lookup</type>
</CustomField>