force-app/main/default/objects/OA_Knowledge_Document__c/fields/AI_Estimated_Cost__c.field-meta.xml
<CustomField><fullName>AI_Estimated_Cost__c</fullName><label>AI Estimated Cost (USD)</label><type>Number</type><precision>16</precision><scale>6</scale></CustomField>