force-app/main/default/objects/OA_Knowledge_Document__c/fields/AI_Provider__c.field-meta.xml
<CustomField><fullName>AI_Provider__c</fullName><label>AI Provider</label><type>Text</type><length>40</length></CustomField>