force-app/main/default/objects/OA_Knowledge_Document__c/fields/AI_Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>AI_Total_Tokens__c</fullName>
    <label>AI Total Tokens</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>