force-app/main/default/objects/OA_Knowledge_Document__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <label>Checksum (SHA-256)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>