force-app/main/default/objects/OA_Knowledge_Document__c/fields/Company_Profile__c.field-meta.xml
<CustomField><fullName>Company_Profile__c</fullName><label>Company Profile</label><type>Lookup</type><referenceTo>OA_Company_Profile__c</referenceTo><relationshipLabel>Knowledge Documents</relationshipLabel><relationshipName>Kd_Company_Profile</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>