force-app/main/default/objects/OA_Knowledge_Document__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
                <default>true</default>
                <label>LOW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>