force-app/main/default/objects/OA_Knowledge_Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField><fullName>Content_Document_Id__c</fullName><label>Content Document Id</label><type>Text</type><length>18</length></CustomField>