force-app/main/default/objects/OA_Knowledge_Document__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
                <default>true</default>
                <label>Original</label>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>