force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extracted_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Agencies__c</fullName>
    <label>Extracted Agencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>