force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extracted_Certifications__c.field-meta.xml
<CustomField><fullName>Extracted_Certifications__c</fullName><label>Extracted Certifications</label><type>Text</type><length>255</length></CustomField>