force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extracted_Clauses__c.field-meta.xml
<CustomField><fullName>Extracted_Clauses__c</fullName><label>Extracted Clauses</label><type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines></CustomField>