force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extracted_Dates__c.field-meta.xml
<CustomField><fullName>Extracted_Dates__c</fullName><label>Extracted Dates</label><type>Text</type><length>255</length></CustomField>