force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extracted_NAICS__c.field-meta.xml
<CustomField><fullName>Extracted_NAICS__c</fullName><label>Extracted NAICS</label><type>Text</type><length>255</length></CustomField>