force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extracted_PSC__c.field-meta.xml
<CustomField><fullName>Extracted_PSC__c</fullName><label>Extracted PSC</label><type>Text</type><length>255</length></CustomField>