force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extracted_Technologies__c.field-meta.xml
<CustomField><fullName>Extracted_Technologies__c</fullName><label>Extracted Technologies</label><type>Text</type><length>255</length></CustomField>