force-app/main/default/objects/OA_Knowledge_Document__c/fields/Extraction_Status__c.field-meta.xml
<CustomField>
<fullName>Extraction_Status__c</fullName><label>Extraction Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted>
<value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
<value><fullName>Extracted</fullName><default>false</default><label>Extracted</label></value>
<value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
<value><fullName>Manual Review</fullName><default>false</default><label>Manual Review</label></value>
</valueSetDefinition></valueSet></CustomField>