force-app/main/default/objects/OA_Knowledge_Document__c/fields/Opportunity_Signal__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Signal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Signal</label>
    <referenceTo>OA_Opportunity_Signal__c</referenceTo>
    <relationshipLabel>Knowledge Documents</relationshipLabel>
    <relationshipName>Kd_Opportunity_Signal</relationshipName>
    <type>Lookup</type>
</CustomField>