force-app/main/default/objects/OA_Knowledge_Document__c/fields/Provenance__c.field-meta.xml
<CustomField><fullName>Provenance__c</fullName><label>Provenance</label><type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines></CustomField>