force-app/main/default/objects/OA_Knowledge_Document__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>