force-app/main/default/objects/OA_Knowledge_Document__c/fields/Source__c.field-meta.xml
<CustomField>
<fullName>Source__c</fullName><label>Source</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted>
<value><fullName>SAM.gov</fullName><default>false</default><label>SAM.gov</label></value>
<value><fullName>Grants.gov</fullName><default>false</default><label>Grants.gov</label></value>
<value><fullName>Salesforce Files</fullName><default>false</default><label>Salesforce Files</label></value>
<value><fullName>Manual Upload</fullName><default>false</default><label>Manual Upload</label></value>
<value><fullName>Partner</fullName><default>false</default><label>Partner</label></value>
<value><fullName>Company</fullName><default>false</default><label>Company</label></value>
</valueSetDefinition></valueSet></CustomField>