force-app/main/default/objects/OA_Knowledge_Document__c/fields/Supersedes__c.field-meta.xml
<CustomField><fullName>Supersedes__c</fullName><label>Supersedes</label><type>Lookup</type><referenceTo>OA_Knowledge_Document__c</referenceTo><relationshipLabel>Superseded By</relationshipLabel><relationshipName>Superseded_By</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>