force-app/main/default/objects/OA_Knowledge_Document__c/fields/Version__c.field-meta.xml
<CustomField><fullName>Version__c</fullName><label>Version</label><type>Number</type><precision>4</precision><scale>0</scale></CustomField>